<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.frankstiles.tictactoe.SelectPlayer">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/paddin_left"
    android:paddingRight="@dimen/padding_right">
   <ImageView
       android:id="@+id/tic_tac_toe_logo"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_gravity="center"
       android:layout_marginTop="20dp"
       android:src="@drawable/menu_logo"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="sans-serif"
        android:text="@string/app_name"
        android:textSize="@dimen/default_size"
        android:textStyle="bold"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="40dp"
        android:background="@color/category_bg_color"
        android:fontFamily="sans-serif"
        android:padding="@dimen/default_padding"
        android:text="@string/txt_select_dimension"
        android:textAllCaps="true"
        android:textColor="@color/default_text"
        android:textSize="@dimen/default_size"
       android:textStyle="bold"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal">
        <RelativeLayout
            android:id="@+id/beginner"
            style="@style/category"
            android:background="@color/category_beginner">
            <TextView
                android:id="@+id/three"
                style="@style/category_text"
                android:paddingBottom="16dp"
                android:text="@string/txt_beginner"
                android:textSize="@dimen/cat_header_txt"/>
            <TextView
                style="@style/category_text"
                android:layout_alignBottom="@+id/three"
                android:text="@string/txt_beginner2"
                android:textSize="@dimen/default_size"/>
        </RelativeLayout>
        <View
            android:layout_width="1dp"
            android:layout_height="88dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:background="@color/view_bg" />
        <RelativeLayout
            android:id="@+id/intermediate"
            style="@style/category"
            android:background="@color/category_intermediate">
            <TextView
                android:id="@+id/four"
                style="@style/category_text"
                android:paddingBottom="16dp"
                android:text="@string/txt_intermediate"
                android:textSize="@dimen/cat_header_txt"/>
            <TextView
                style="@style/category_text"
                android:layout_alignBottom="@+id/four"
                android:text="@string/txt_intermediate2"
                android:textSize="@dimen/default_size"/>
        </RelativeLayout>
        <View
            android:layout_width="1dp"
            android:layout_height="88dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:background="@color/view_bg" />
        <RelativeLayout
            android:id="@+id/advanced"
            style="@style/category"
            android:background="@color/category_advanced">
            <TextView
                android:id="@+id/five"
                style="@style/category_text"
                android:paddingBottom="16dp"
                android:text="@string/txt_advanced"
                android:textSize="@dimen/cat_header_txt"/>
            <TextView
                style="@style/category_text"
                android:layout_alignBottom="@+id/five"
                android:text="@string/txt_advanced2"
                android:textSize="@dimen/default_size"/>
        </RelativeLayout>
    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <CheckBox
            android:id="@+id/checkbox_sound"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="30dp"
            android:text="@string/txt_sound"/>
    </RelativeLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/category_bg_color"
        android:fontFamily="sans-serif"
        android:padding="@dimen/default_padding"
        android:text="@string/txt_instruction_header"
        android:textAllCaps="true"
        android:textColor="@color/default_text"
        android:textSize="@dimen/default_size"
        android:textStyle="bold"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/default_margin"
        android:fontFamily="sans-serif"
        android:padding="8dp"
        android:text="@string/txt_game_instruction"
        android:textAlignment="inherit"
        android:textSize="14sp"/>
</LinearLayout>
</ScrollView>